--- a/WebApplication1/WebApplication1/Web.config
+++ b/WebApplication1/WebApplication1/Web.config
@@ -9,7 +9,17 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication1-20150729033125.mdf;Initial Catalog=aspnet-WebApplication1-20150729033125;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" 
+         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;
+         AttachDbFilename=|DataDirectory|\aspnet-WebApplication1-20150729033125.mdf;
+         Initial Catalog=aspnet-WebApplication1-20150729033125;
+         Integrated Security=True" 
+         providerName="System.Data.SqlClient" />
+    <add name="WingtipToys"
+         connectionString="Data Source=(LocalDB)\v11.0;
+         AttachDbFilename=|DataDirectory|\wingtiptoys.mdf;
+         Integrated Security=True" 
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
