--- a/WebApplication1/WebApplication1/bin/WebApplication1.dll.config
+++ b/WebApplication1/WebApplication1/bin/WebApplication1.dll.config
@@ -15,13 +15,16 @@
          Initial Catalog=aspnet-WebApplication1-20150729033125;
          Integrated Security=True" 
          providerName="System.Data.SqlClient" />
-    <add name="WingtipToys"
-         connectionString="Data Source=(LocalDB)\v11.0;
+    <!--
+    <add name="WebApplication1"
+          connectionString="Data Source=(LocalDB)\v11.0;
          AttachDbFilename=|DataDirectory|\wingtiptoys.mdf;
-         Integrated Security=True" 
-         providerName="System.Data.SqlClient" />
+         Integrated Security=True"
+          providerName="System.Data.SqlClient" />
+          -->
   </connectionStrings>
   <system.web>
+    <customErrors mode="Off"/>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
