--- a/WebApplication1/WebApplication1/bin/WebApplication1.dll.config
+++ b/WebApplication1/WebApplication1/bin/WebApplication1.dll.config
@@ -117,9 +117,19 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <!--
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+    -->
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v11.0" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
