working online (http://www.asp.net/web-api/overview/data/using-web-api-with-entity-framework/part-3)

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -397,6 +397,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201507291635009_InitialCreate.cs" />
+    <Compile Include="Migrations\201507291635009_InitialCreate.Designer.cs">
+      <DependentUpon>201507291635009_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201507291642416_Initial.cs" />
+    <Compile Include="Migrations\201507291642416_Initial.Designer.cs">
+      <DependentUpon>201507291642416_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Product.cs" />
@@ -438,6 +447,14 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201507291635009_InitialCreate.resx">
+      <DependentUpon>201507291635009_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507291642416_Initial.resx">
+      <DependentUpon>201507291642416_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
