fixed a webconfig problem

--- a/WebApplication1/WebApplication1/bin/WebApplication1.dll.config
+++ b/WebApplication1/WebApplication1/bin/WebApplication1.dll.config
@@ -83,7 +83,18 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Extensibility.Web.ApplicationInsightsHttpModule, Microsoft.ApplicationInsights.Extensibility.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
-  
+    <!-- FOR Google GO
+    <handlers>
+      <add name="httpplatformhandler" path="*" verb="*" modules="httpPlatformHandler" resourceType="Unspecified" />
+    </handlers>
+    <httpPlatform processPath="d:\home\site\wwwroot\go\bin\go.exe"
+                  arguments="run d:\home\site\wwwroot\server.go"
+                  startupTimeLimit="60">
+      <environmentVariables>
+        <environmentVariable name="GOROOT" value="d:\home\site\wwwroot\go" />
+      </environmentVariables>
+    </httpPlatform>
+    -->
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
